--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
         <div class="intro-body">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
+                    <div class="col-lg-12">
                         <center><img class=img-responsive src=img/logo.png alt=""></center>
+                        <br>
+                        <br>
                         <h1><big><big><big>GooRoo</big></big></big></h1>
-                        <p class="intro-text">Your guide for life.</p>
+<!--                         <p class="intro-text">Your guide for life.</p> -->
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
